--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             </div>
             <div id="divAdd">
                 <input type="text" id="addTask" placeholder="Take the garbage out">
-                <button id="buttonAddTask" onclick="clicarAdd()" onmouseenter="entrarAdd()" onmouseout="sairAdd()">+</button>
+                <button id="buttonAddTask" onclick="clicarAdd()">+</button>
             </div>
             <div id="divList">
-                <p>You have ... pending items</p>
+                <p id="tasksSum">You have ... pending items</p>
                 <ul id="listWrapper">
                     <!--
                         <li>
