Add show complete button

--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -22,32 +22,11 @@
             <div id="divList">
                 <p id="tasksSum">You have ... pending items</p>
                 <ul id="listWrapper">
-                    <!--
-                        <li>
-                        <label>
-                            <input type="checkbox" name="inputTasks">
-                            learn JS
-                        </label>
-                    </li>
-                    <li>
-                        <label>
-                            <input type="checkbox" name="inputTasks">
-                            study english
-                        </label>
-                    </li>
-                    <li>
-                        <label>
-                            <input type="checkbox" name="inputTasks">
-                            upload project
-                        </label>
-                    </li>
-                    -->
-                    
                 </ul>
             </div>
         </div>
         <div id="divButtons">
-            <button id="complete">Show Complete</button>
+            <button id="show" onclick="toggleTaskList()" >Show Complete</button>
             <button id="clear">Clear All</button>
         </div>
     </section>
