Add Clear All button

--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -17,7 +17,7 @@
             </div>
             <div id="divAdd">
                 <input type="text" id="addTask" placeholder="Take the garbage out">
-                <button id="buttonAddTask" onclick="clicarAdd()">+</button>
+                <button id="buttonAddTask" onclick="clicarAdd()" >+</button>
             </div>
             <div id="divList">
                 <p id="tasksSum">You have ... pending items</p>
@@ -27,7 +27,7 @@
         </div>
         <div id="divButtons">
             <button id="show" onclick="toggleTaskList()" >Show Complete</button>
-            <button id="clear">Clear All</button>
+            <button id="clear" onclick="clearAll()">Clear All</button>
         </div>
     </section>
 </body>
